--- a/type_A/html/Main.html
+++ b/type_A/html/Main.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../resources/css/main.css">
     <script src="../resources/js/jqery-3.5.1.min.js"></script>
     <script src="../resources/js/ui.js"></script>
+    <script src="../resources/js/plugin.js"></script>
     <script src="../resources/js/swiper-bundle.min.js"></script>
 </head>
 <body>
@@ -169,14 +170,187 @@
                 </div>
             </section>
 
-            <section class="future_para">
+            <section class="fslide fslide01">
+				<div class="inner scrollCtr">
+					<div class="bcg"></div>
+					<div class="desc">
+						<div class="sec sec01">
+							<dl>
+                                <dt>사람과 기술이 함께하는 세메스</dt>
+                                <dd>과감함 투자와 끊임없는 연구개발 및 기술혁신을 통해, SEMES는<br>전 세계 장비 시장을 선도해 나갈 것입니다.</dd>
+                                <dd class="more_btn"><a href="#"><img src="../resources/images/fslide01_btn.png" alt="more_btn"></a></dd>
+                            </dl>
+						</div>
+					</div>
+				</div>
+			</section>
 
-            </section>
+            <section class="fslide fslide02">
+				<div class="inner scrollCtr">
+					<div class="bcg"></div>
+					<div class="desc">
+						<div class="sec sec02">
+							<dl>
+                                <dt>지속가능한 미래를 꿈꿉니다</dt>
+                                <dd>글로벌 일류 장비기업을 지향하는 세메스는 고객을 중심으로<br>협력사와도 상생 협력하는 정도 경영을 실천하고 있으며,<br>나아가 세메스 가족 모두가 더불어 함께 만들어가는 행복한 일터를<br>가꾸기 위해 앞장서고 있습니다.</dd>
+                                <dd class="more_btn"><a href="#"><img src="../resources/images/fslide02_btn.png" alt="more_btn"></a></dd>
+                            </dl>
+						</div>
+					</div>
+				</div>
+			</section>
+
+            <section class="fslide fslide03">
+				<div class="inner scrollCtr">
+					<div class="bcg"></div>
+					<div class="desc">
+						<div class="sec sec03">
+							<dl>
+                                <dt>새로운 기회를 창조하는 기업,<br>세메스와 함께 하세요</dt>
+                                <dd>세메스는 개인과 회사의 공동성장을 추구합니다.<br>창의적인 아이디어와 자유로운 소통문화를 장려하고 있으며 최고의<br>엔지니어로 성장할 수 있도록 다양한 교육프로그램을 제공합니다.</dd>
+                                <dd class="more_btn"><a href="#"><img src="../resources/images/fslide03_btn.png" alt="more_btn"></a></dd>
+                            </dl>
+						</div>
+					</div>
+				</div>
+			</section>
 
             <section class="tech">
-
+                <div class="tit">
+                    <h2 class="eng">See the Technology</h2>
+                    <p>미래를 보는 창을 만들어 갑니다</p>
+                </div>
+                <div class="desc">
+                    <p>독자 기술에 의한 신제품 개발과 제조경쟁력을 바탕으로<br>글로벌 TOP 장비 메이커로 도약하고 있습니다</p>
+                </div>
             </section>
+
+            <section class="tech_cont">
+                <ul>
+                    <li class="cont_01">
+                        <div class="bcg"></div>
+                        <div class="dim"></div>
+                        <div class="tit"><h2 class="eng">Semiconductor<br>Equipment</h2></div>
+                    </li>
+                    <li class="cont_02">
+                        <div class="bcg"></div>
+                        <div class="dim"></div>
+                        <div class="tit"><h2 class="eng">Display <br>Equipment</h2></div>
+                    </li>
+                    <li class="cont_03">
+                        <div class="bcg"></div>
+                        <div class="dim"></div>
+                        <div class="tit"><h2 class="eng">Line <br>Equipment</h2></div>
+                    </li>
+                </ul>
+            </section>
+
+            <!-- <section class="pro">
+                <div class="tab_wrap">
+                    <div class="bcg"></div>
+                    <div class="tab"><img src="" alt="tab"></div>
+                </div>
+
+                <div class="sl_wrap">
+
+                </div>
+            </section> -->
+
+            <section class="about">
+                <div class="inner">
+                    <div class="la fl">
+                        <div class="desc">
+                            <h2>세메스를 말하다</h2>
+                            <dl>
+                                <dt>우리 회사는 기술에 관한 한 <br>모든 임직원은 평등합니다</dt>
+                                <dd>강창진 대표는 1993년 삼성전자 메모리연구소로 입사해<br>반도체연구소 공정개발팀, 기획지원팀장, DS부문 기획팀장을 <br>역임했으며 올해 세메스 대표를 맡아 회사을 이끌고 있다.</dd>
+                            </dl>
+                            <a href="#"><img src="../resources/images/about_la_more_btn.png" alt="더보기"></a>
+                        </div>
+                        <div class="sl_wrap">
+                            <h2 class="eng">More Stories</h2>
+                            <div class="swiper-container">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <ul>
+                                            <li>
+                                                <img src="../resources/images/about_sl_01_bg.png" alt="">
+                                                <img class="tit" src="../resources/images/about_sl_01_tit.png" alt="">
+                                            </li>
+                                            <li>
+                                                <img src="../resources/images/about_sl_02_bg.png" alt="">
+                                                <img class="tit"  src="../resources/images/about_sl_02_tit.png" alt="">
+                                            </li>
+                                            <li>
+                                                <img src="../resources/images/about_sl_03_bg.png" alt="">
+                                                <img class="tit"  src="../resources/images/about_sl_03_tit.png" alt="">
+                                            </li>
+                                            <li>
+                                                <img src="../resources/images/about_sl_04_bg.png" alt="">
+                                                <img class="tit"  src="../resources/images/about_sl_04_tit.png" alt="">
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <ul>
+                                            <li>
+                                                <img src="../resources/images/about_sl_01_bg.png" alt="">
+                                                <img class="tit"  src="../resources/images/about_sl_01_tit.png" alt="">
+                                            </li>
+                                            <li>
+                                                <img src="../resources/images/about_sl_02_bg.png" alt="">
+                                                <img class="tit"  src="../resources/images/about_sl_02_tit.png" alt="">
+                                            </li>
+                                            <li>
+                                                <img src="../resources/images/about_sl_03_bg.png" alt="">
+                                                <img class="tit"  src="../resources/images/about_sl_03_tit.png" alt="">
+                                            </li>
+                                            <li>
+                                                <img src="../resources/images/about_sl_04_bg.png" alt="">
+                                                <img class="tit"  src="../resources/images/about_sl_04_tit.png" alt="">
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <!-- Add Pagination -->
+                                <div class="swiper-pagination"></div>
+                                <!-- Add Arrows -->
+                                <div class="swiper-button-next"></div>
+                                <div class="swiper-button-prev"></div>
+                            </div>
+
+                            <!-- Initialize Swiper -->
+                            <script>
+                                var swiper = new Swiper('.swiper-container', {
+                                    autoheight:'true',
+                                    loop:'true',
+                                pagination: {
+                                    el: '.swiper-pagination',
+                                    type: 'fraction',
+                                },
+                                navigation: {
+                                    nextEl: '.swiper-button-next',
+                                    prevEl: '',
+                                },
+                                });
+                            </script>
+                        </div>
+                    </div>
+                    <div class="ra fr">
+                        <div class="visual">
+                            <img class="bg" src="../resources/images/about_ra_thumb_bg.png" alt="thumbBg">
+                            <img class="ceo" src="../resources/images/about_ra_thumb_ceo.png" alt="ceo">
+                            <div class="paging"><img src="../resources/images/about_sl_paging.png" alt="페이징"></div>
+                        </div>
+                    </div>
+                </div>
+                
+            </section>
+
         </main>
+        <footer>
+            <img src="../resources/images/footer.png" alt="footer">
+        </footer>
     </div>
     
 </body>
