--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
     tr:hover td{background:#f6f6f6}
     a{text-decoration:none; color:#000;}
     a:hover{color:#ddd}
-    .title{display: inline-block; box-sizing: border-box; color: #0257a7 !important; margin: 30px 0;}
+    .title{width: 50%; display: block; text-align: center; margin: 100px auto;}
+    .title h1{display: inline-block; width: 100%;}
+    .title h1 img{width: 100%;}
+    /* .title{display: inline-block; box-sizing: border-box; color: #0257a7 !important; margin: 30px 0;}
     .title h1{font-size:30px; margin: 0; padding: 0;}
-    .title:hover{color: #0257a7;}
+    .title:hover{color: #0257a7;} */
 </style>
 </head>
 <body>
     <div id="wrap">
-        <a href="index.html" class="title"><h1>SEMES</h1></a>
-        <table>
+        <a href="index.html" class="title"><h1><img src="type_B/resources/images/logo_blue.png" alt=""></h1></a>
+        <!-- <table>
             <thead>
                 <tr>
                     <th>depth1</th>
@@ -52,7 +55,7 @@
                     <td></td>
                 </tr>
             </tbody>
-        </table>
+        </table> -->
     </div><!-- //wrap -->
 </body>
 </html>
