--- a/type_A/html/Main.html
+++ b/type_A/html/Main.html
@@ -55,7 +55,7 @@
                             <li>
                                 <a href="#" class="dep01">Product</a>
                                 <ul class="sub_menu">
-                                    <li><a href="#">반도체 장비</a></li>
+                                    <li><a href="Product.html" target="blank">반도체 장비</a></li>
                                     <li><a href="#">디스플레이 장비</a></li>
                                 </ul>
                             </li>
