--- a/type_B/html/Main.html
+++ b/type_B/html/Main.html
@@ -382,27 +382,34 @@
             <section class="main_vsl">
                 <div class="swiper-container sl_wrap">
                     <div class="swiper-wrapper">
-                    <div class="swiper-slide" data-title="미래">
-                        <dl class="desc">
-                            <dt><img src="../resources/images/main_vsl_tit.png" alt=""></dt>
-                            <dd><img src="../resources/images/main_vsl_desc.png" alt=""></dd>
-                        </dl>
+                        
+                        <div class="swiper-slide" data-title="video">
+                            <video src="../resources/videos/type_B_main.mp4" muted autoplay></video>
+                        </div>
+
+                        <div class="swiper-slide" data-title="현재">
+                            <dl class="desc">
+                                <dt><img src="../resources/images/main_vsl_03_tit.png" alt=""></dt>
+                                <dd><img src="../resources/images/main_vsl_desc.png" alt=""></dd>
+                            </dl>
+                        </div>
+
+                        <div class="swiper-slide" data-title="기술">
+                            <dl class="desc">
+                                <dt><img src="../resources/images/main_vsl_02_tit.png" alt=""></dt>
+                                <dd><img src="../resources/images/main_vsl_desc.png" alt=""></dd>
+                            </dl>
+                        </div>
+
+                        <div class="swiper-slide" data-title="미래">
+                            <dl class="desc">
+                                <dt><img src="../resources/images/main_vsl_tit.png" alt=""></dt>
+                                <dd><img src="../resources/images/main_vsl_desc.png" alt=""></dd>
+                            </dl>
+                        </div>
+                        <!-- Add Pagination -->
+                        <div class="swiper-pagination"></div>
                     </div>
-                    <div class="swiper-slide" data-title="기술">
-                        <dl class="desc">
-                            <dt><img src="../resources/images/main_vsl_02_tit.png" alt=""></dt>
-                            <dd><img src="../resources/images/main_vsl_desc.png" alt=""></dd>
-                        </dl>
-                    </div>
-                    <div class="swiper-slide" data-title="현재">
-                        <dl class="desc">
-                            <dt><img src="../resources/images/main_vsl_03_tit.png" alt=""></dt>
-                            <dd><img src="../resources/images/main_vsl_desc.png" alt=""></dd>
-                        </dl>
-                    </div>
-                    </div>
-                    <!-- Add Pagination -->
-                    <div class="swiper-pagination"></div>
                 </div>
                 <div class="scroll_btn"><img src="../resources/images/main_vsl_scroll.png" alt=""></div>
                 <div class="bar"><img src="../resources/images/main_vsl_bar.png" alt=""></div>
