B안 링크 수정

--- a/type_B/html/Main.html
+++ b/type_B/html/Main.html
@@ -94,14 +94,14 @@
                                     </li>
                                     <li>
                                         <ol>
-                                            <li>반도체 장비</li>
+                                            <li><a href="Product.html">반도체 장비</a></li>
                                             <li>디스플레이 장비</li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
                                             <li>뉴스룸</li>
-                                            <li>세메스를 말하다</li>
+                                            <li><a href="Story.html">세메스를 말하다</a></li>
                                             <li>온라인 홍보관</li>
                                         </ol>
                                     </li>
@@ -152,14 +152,14 @@
                                     </li>
                                     <li>
                                         <ol>
-                                            <li>반도체 장비</li>
+                                            <li><a href="Product.html">반도체 장비</a></li>
                                             <li>디스플레이 장비</li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
                                             <li>뉴스룸</li>
-                                            <li>세메스를 말하다</li>
+                                            <li><a href="Story.html">세메스를 말하다</a></li>
                                             <li>온라인 홍보관</li>
                                         </ol>
                                     </li>
@@ -210,14 +210,14 @@
                                     </li>
                                     <li>
                                         <ol>
-                                            <li>반도체 장비</li>
+                                            <li><a href="Product.html">반도체 장비</a></li>
                                             <li>디스플레이 장비</li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
                                             <li>뉴스룸</li>
-                                            <li>세메스를 말하다</li>
+                                            <li><a href="Story.html">세메스를 말하다</a></li>
                                             <li>온라인 홍보관</li>
                                         </ol>
                                     </li>
@@ -268,14 +268,14 @@
                                     </li>
                                     <li>
                                         <ol>
-                                            <li>반도체 장비</li>
+                                            <li><a href="Product.html">반도체 장비</a></li>
                                             <li>디스플레이 장비</li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
                                             <li>뉴스룸</li>
-                                            <li>세메스를 말하다</li>
+                                            <li><a href="Story.html">세메스를 말하다</a></li>
                                             <li>온라인 홍보관</li>
                                         </ol>
                                     </li>
@@ -326,14 +326,14 @@
                                     </li>
                                     <li>
                                         <ol>
-                                            <li>반도체 장비</li>
+                                            <li><a href="Product.html">반도체 장비</a></li>
                                             <li>디스플레이 장비</li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
                                             <li>뉴스룸</li>
-                                            <li>세메스를 말하다</li>
+                                            <li><a href="Story.html">세메스를 말하다</a></li>
                                             <li>온라인 홍보관</li>
                                         </ol>
                                     </li>
