--- a/type_B/html/Product.html
+++ b/type_B/html/Product.html
@@ -29,15 +29,19 @@
                                             <li>기업개요</li>
                                             <li>CEO 메시지</li>
                                             <li>경영철학</li>
-                                            <li>연혁</li>
-                                            <li>IR정보</li>
-                                            <li>사업장 안내</li>
+                                            <li><a href="#">핵심가치</a></li>
+                                            <li><a href="#">기업비전</a></li>
+                                            <li><a href="#">연혁</a></li>
+                                            <li><a href="#">IR정보</a></li>
+                                            <li><a href="#">사업장 안내</a></li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
-                                            <li><a href="Product.html">반도체 장비</a></li>
-                                            <li>디스플레이 장비</li>
+                                            <li><a href="#">제품개요</a></li>
+                                            <li><a href="#">솔루션</a></li>
+                                            <li><a href="#">공정</a></li>
+                                            <li><a href="Product.html" target="blank">제품</a></li>
                                         </ol>
                                     </li>
                                     <li>
@@ -53,12 +57,13 @@
                                             <li>인사제도</li>
                                             <li>채용절차</li>
                                             <li>직무소개</li>
-                                            <li>채용FAQ</li>
                                             <li>채용공고</li>
+                                            <li>채용FAQ</li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
+                                            <li>지속가능경영 소개</li>
                                             <li>윤리경영</li>
                                             <li>준법경영</li>
                                             <li>상생협력</li>
@@ -70,8 +75,8 @@
                                         <ol>
                                             <li>제품지원 서비스</li>
                                             <li>협력사 서비스</li>
-                                            <li>문의하기</li>
                                             <li>오시는 길</li>
+                                            <li>문의하기</li>
                                         </ol>
                                     </li>
                                 </ul>
@@ -87,15 +92,19 @@
                                             <li>기업개요</li>
                                             <li>CEO 메시지</li>
                                             <li>경영철학</li>
-                                            <li>연혁</li>
-                                            <li>IR정보</li>
-                                            <li>사업장 안내</li>
+                                            <li><a href="#">핵심가치</a></li>
+                                            <li><a href="#">기업비전</a></li>
+                                            <li><a href="#">연혁</a></li>
+                                            <li><a href="#">IR정보</a></li>
+                                            <li><a href="#">사업장 안내</a></li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
-                                            <li><a href="Product.html">반도체 장비</a></li>
-                                            <li>디스플레이 장비</li>
+                                            <li><a href="#">제품개요</a></li>
+                                            <li><a href="#">솔루션</a></li>
+                                            <li><a href="#">공정</a></li>
+                                            <li><a href="Product.html" target="blank">제품</a></li>
                                         </ol>
                                     </li>
                                     <li>
@@ -111,12 +120,13 @@
                                             <li>인사제도</li>
                                             <li>채용절차</li>
                                             <li>직무소개</li>
-                                            <li>채용FAQ</li>
                                             <li>채용공고</li>
+                                            <li>채용FAQ</li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
+                                            <li>지속가능경영 소개</li>
                                             <li>윤리경영</li>
                                             <li>준법경영</li>
                                             <li>상생협력</li>
@@ -128,8 +138,8 @@
                                         <ol>
                                             <li>제품지원 서비스</li>
                                             <li>협력사 서비스</li>
-                                            <li>문의하기</li>
                                             <li>오시는 길</li>
+                                            <li>문의하기</li>
                                         </ol>
                                     </li>
                                 </ul>
@@ -145,15 +155,19 @@
                                             <li>기업개요</li>
                                             <li>CEO 메시지</li>
                                             <li>경영철학</li>
-                                            <li>연혁</li>
-                                            <li>IR정보</li>
-                                            <li>사업장 안내</li>
+                                            <li><a href="#">핵심가치</a></li>
+                                            <li><a href="#">기업비전</a></li>
+                                            <li><a href="#">연혁</a></li>
+                                            <li><a href="#">IR정보</a></li>
+                                            <li><a href="#">사업장 안내</a></li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
-                                            <li><a href="Product.html">반도체 장비</a></li>
-                                            <li>디스플레이 장비</li>
+                                            <li><a href="#">제품개요</a></li>
+                                            <li><a href="#">솔루션</a></li>
+                                            <li><a href="#">공정</a></li>
+                                            <li><a href="Product.html" target="blank">제품</a></li>
                                         </ol>
                                     </li>
                                     <li>
@@ -169,12 +183,13 @@
                                             <li>인사제도</li>
                                             <li>채용절차</li>
                                             <li>직무소개</li>
-                                            <li>채용FAQ</li>
                                             <li>채용공고</li>
+                                            <li>채용FAQ</li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
+                                            <li>지속가능경영 소개</li>
                                             <li>윤리경영</li>
                                             <li>준법경영</li>
                                             <li>상생협력</li>
@@ -186,8 +201,8 @@
                                         <ol>
                                             <li>제품지원 서비스</li>
                                             <li>협력사 서비스</li>
-                                            <li>문의하기</li>
                                             <li>오시는 길</li>
+                                            <li>문의하기</li>
                                         </ol>
                                     </li>
                                 </ul>
@@ -203,15 +218,19 @@
                                             <li>기업개요</li>
                                             <li>CEO 메시지</li>
                                             <li>경영철학</li>
-                                            <li>연혁</li>
-                                            <li>IR정보</li>
-                                            <li>사업장 안내</li>
+                                            <li><a href="#">핵심가치</a></li>
+                                            <li><a href="#">기업비전</a></li>
+                                            <li><a href="#">연혁</a></li>
+                                            <li><a href="#">IR정보</a></li>
+                                            <li><a href="#">사업장 안내</a></li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
-                                            <li><a href="Product.html">반도체 장비</a></li>
-                                            <li>디스플레이 장비</li>
+                                            <li><a href="#">제품개요</a></li>
+                                            <li><a href="#">솔루션</a></li>
+                                            <li><a href="#">공정</a></li>
+                                            <li><a href="Product.html" target="blank">제품</a></li>
                                         </ol>
                                     </li>
                                     <li>
@@ -227,12 +246,13 @@
                                             <li>인사제도</li>
                                             <li>채용절차</li>
                                             <li>직무소개</li>
-                                            <li>채용FAQ</li>
                                             <li>채용공고</li>
+                                            <li>채용FAQ</li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
+                                            <li>지속가능경영 소개</li>
                                             <li>윤리경영</li>
                                             <li>준법경영</li>
                                             <li>상생협력</li>
@@ -244,8 +264,8 @@
                                         <ol>
                                             <li>제품지원 서비스</li>
                                             <li>협력사 서비스</li>
-                                            <li>문의하기</li>
                                             <li>오시는 길</li>
+                                            <li>문의하기</li>
                                         </ol>
                                     </li>
                                 </ul>
@@ -261,15 +281,19 @@
                                             <li>기업개요</li>
                                             <li>CEO 메시지</li>
                                             <li>경영철학</li>
-                                            <li>연혁</li>
-                                            <li>IR정보</li>
-                                            <li>사업장 안내</li>
+                                            <li><a href="#">핵심가치</a></li>
+                                            <li><a href="#">기업비전</a></li>
+                                            <li><a href="#">연혁</a></li>
+                                            <li><a href="#">IR정보</a></li>
+                                            <li><a href="#">사업장 안내</a></li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
-                                            <li><a href="Product.html">반도체 장비</a></li>
-                                            <li>디스플레이 장비</li>
+                                            <li><a href="#">제품개요</a></li>
+                                            <li><a href="#">솔루션</a></li>
+                                            <li><a href="#">공정</a></li>
+                                            <li><a href="Product.html" target="blank">제품</a></li>
                                         </ol>
                                     </li>
                                     <li>
@@ -285,12 +309,13 @@
                                             <li>인사제도</li>
                                             <li>채용절차</li>
                                             <li>직무소개</li>
-                                            <li>채용FAQ</li>
                                             <li>채용공고</li>
+                                            <li>채용FAQ</li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
+                                            <li>지속가능경영 소개</li>
                                             <li>윤리경영</li>
                                             <li>준법경영</li>
                                             <li>상생협력</li>
@@ -302,8 +327,8 @@
                                         <ol>
                                             <li>제품지원 서비스</li>
                                             <li>협력사 서비스</li>
-                                            <li>문의하기</li>
                                             <li>오시는 길</li>
+                                            <li>문의하기</li>
                                         </ol>
                                     </li>
                                 </ul>
@@ -319,21 +344,25 @@
                                             <li>기업개요</li>
                                             <li>CEO 메시지</li>
                                             <li>경영철학</li>
-                                            <li>연혁</li>
-                                            <li>IR정보</li>
-                                            <li>사업장 안내</li>
+                                            <li><a href="#">핵심가치</a></li>
+                                            <li><a href="#">기업비전</a></li>
+                                            <li><a href="#">연혁</a></li>
+                                            <li><a href="#">IR정보</a></li>
+                                            <li><a href="#">사업장 안내</a></li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
-                                            <li>반도체 장비</li>
-                                            <li>디스플레이 장비</li>
+                                            <li><a href="#">제품개요</a></li>
+                                            <li><a href="#">솔루션</a></li>
+                                            <li><a href="#">공정</a></li>
+                                            <li><a href="Product.html" target="blank">제품</a></li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
                                             <li>뉴스룸</li>
-                                            <li>세메스를 말하다</li>
+                                            <li><a href="Story.html">세메스를 말하다</a></li>
                                             <li>온라인 홍보관</li>
                                         </ol>
                                     </li>
@@ -343,12 +372,13 @@
                                             <li>인사제도</li>
                                             <li>채용절차</li>
                                             <li>직무소개</li>
-                                            <li>채용FAQ</li>
                                             <li>채용공고</li>
+                                            <li>채용FAQ</li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
+                                            <li>지속가능경영 소개</li>
                                             <li>윤리경영</li>
                                             <li>준법경영</li>
                                             <li>상생협력</li>
@@ -360,8 +390,8 @@
                                         <ol>
                                             <li>제품지원 서비스</li>
                                             <li>협력사 서비스</li>
-                                            <li>문의하기</li>
                                             <li>오시는 길</li>
+                                            <li>문의하기</li>
                                         </ol>
                                     </li>
                                 </ul>
