--- a/type_B/html/Product.html
+++ b/type_B/html/Product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEMES-Product</title>
+    <title>Type_B_Product</title>
     <link rel="stylesheet" href="../resources/css/import.css">
     <link rel="stylesheet" href="../resources/css/sub.css">
     <script src="../resources/js/jqery-3.5.1.min.js"></script>
