--- a/type_B/html/Story.html
+++ b/type_B/html/Story.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Story</title>
+    <title>Type_B_Story</title>
     <link rel="stylesheet" href="../resources/css/import.css">
     <link rel="stylesheet" href="../resources/css/global.css">
     <link rel="stylesheet" href="../resources/css/story.css">
